Create new address
