# backend/config/swagger/swagger.json
@@ -221,6 +221,82 @@
         }
       }
     },
+    "/api/users/me/address": {
+      "post": {
+        "tags": [
+          "Profile"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "unitNumber": {
+                  "type": "string",
+                  "example": "12345"
+                },
+                "streetNumber": {
+                  "type": "string",
+                  "example": "12343"
+                },
+                "addressLine1": {
+                  "type": "string",
+                  "example": ""
+                },
+                "city": {
+                  "type": "string",
+                  "example": "New York"
+                },
+                "region": {
+                  "type": "string",
+                  "example": "EAST COAST"
+                },
+                "postalCode": {
+                  "type": "string",
+                  "example": "2483"
+                },
+                "vatID": {
+                  "type": "string",
+                  "example": "6326434"
+                },
+                "country": {
+                  "type": "string",
+                  "example": "US"
+                },
+                "type": {
+                  "type": "string",
+                  "example": "Commercial"
+                }
+              },
+              "required": [
+                "unitNumber",
+                "streetNumber",
+                "addressLine1",
+                "city",
+                "region",
+                "postalCode",
+                "vatID",
+                "country",
+                "type"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/api/users/updateMe": {
       "patch": {
         "tags": [
