# backend/controllers/userController.js
@@ -78,3 +78,50 @@ exports.getUser = catchAsync(async (req, res, next) => {
     },
   });
 });
+
+exports.createAddress = catchAsync(async (req, res, next) => {
+  /*  
+  #swagger.tags = ['Profile']
+  #swagger.parameters['body'] = {
+                in: 'body',
+                schema: {
+                    $unitNumber: '12345',
+                    $streetNumber: '12343',
+                    $addressLine1: 'Rabbit street',
+                    $addressLine1: '',
+                    $city: 'New York',
+                    $region: 'EAST COAST',
+                    $postalCode: '2483',
+                    $vatID: '6326434',
+                    $country: 'US',
+                    $type: 'Commercial',
+                }
+        } */
+
+  const user = await User.findOne({ _id: req.params.id }).exec();
+
+  const newAddress = await Address.create({
+    unitNumber: req.body.unitNumber,
+    streetNumber: req.body.streetNumber,
+    addressLine1: req.body.addressLine1,
+    addressLine2: req.body.addressLine2,
+    city: req.body.city,
+    region: req.body.region,
+    postalCode: req.body.postalCode,
+    vatID: req.body.vatID,
+    countryID: req.body.country, // Assuming countryID is an ObjectId
+    type: req.body.type,
+  });
+
+  user.addresses.push(newAddress._id);
+  user.save();
+
+  await user.populate("addresses");
+
+  res.status(200).json({
+    status: "success",
+    data: {
+      data: user,
+    },
+  });
+});
